# MiaouMod

./: .gitmodules  .travis.yml  CMakeLists.txt  README.mdown  build_miaoumod_mingw.sh  build_wclang.sh  compile.sh
CMakeModules/: FindLuaJIT.cmake
script/base/: banner.lua  logevents.lua
src/: CMakeLists.txt  dpiaware.manifest
src/game/: server.cpp
src/miaoumod/: bind_funcs.hpp  lua.cpp  startup.cpp
src/shared/: iengine.h  stream.cpp  tools.h
src/win32/: Toolchain-mingw64-clang.cmake  mingw.rc  tesseract.rc
